fixed link spacing

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
  }
 
 .customNav ul li {
-  margin-right: 10%;
+  margin-left: 10%;
   color:#ddd;
   text-decoration: none;
   list-style-type: none;
@@ -60,6 +60,7 @@
 
 .nav_links ul {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr .85fr 1fr;
+  align-items: flex-end;
 
 }
